Update README.md
Polishing